--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore everything
 week1/*
+week2/*
 
 # Allow only the specific file
 !week1/missing_values.ipynb
+!week2/Practical_Exercise_Age_Group_Popularity.ipynb
