--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Ignore everything
 week1/*
 week2/*
+week3/*
 Final_Project/*
 # Allow only the specific file
 !week1/missing_values.ipynb
 !week2/Practical_Exercise_Age_Group_Popularity.ipynb
 !Final_Project/GASSAF_Recommender_System_Course_Project_GitHub_withconda.ipynb
 !Final_Project/NeuMF_GASSAF_Recommender_System_Course_Project_GitHub.ipynb
+!week3/Practical_Execrcise_NeuMF_Recommender_System_GitHub-.ipynb
